samples/_failures_safe/1761444135_74a442_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_bc1577cd.c: In function ‘main’:
./samples/SAFE/__tmp_bc1577cd.c:137:12: error: missing terminating " character
  137 |     printf("Magnitude difference: %.6f\n
      |            ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~
./samples/SAFE/__tmp_bc1577cd.c:137:5: error: expected expression at end of input
  137 |     printf("Magnitude difference: %.6f\n
      |     ^~~~~~
./samples/SAFE/__tmp_bc1577cd.c:137:5: error: expected declaration or statement at end of input
